# PromptX

./: .gitignore  README.md  burst.py  const.py  examples.py  helper.py  jet.py  magnetar.py  main.py  pyproject.toml  requirements.txt  wind.py
promptx/: Engine.py  Jet.py  Observer.py  Opacity.py  Outflow.py  RadModels.py  Radiation.py  Wind.py  __init__.py  helper.py  jet.py  magnetar.py  wind.py
scripts/: examples.py
